<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ZNDevConfigActivity" >
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" 
        android:paddingLeft="15dp"
        android:paddingRight="15dp" 
        android:layout_marginTop="10dp"
        android:id="@+id/linearLayout1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="SSID:"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/ssid"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="10dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:textColor="#000000"
                android:text="@string/label_password" />

            <EditText
                android:id="@+id/pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textColor="#000000"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:layout_weight="1"
                 />
            <CheckBox
	            android:id="@+id/showPwd"
	            android:layout_width="0dp"
	            android:layout_weight="3"
	            android:layout_height="wrap_content"
	            android:textColor="#000000"
	            android:text="@string/label_show_password" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textColor="#000000"
                android:text="@string/label_device_count" />

            <RadioGroup
                android:id="@+id/deviceCountGroup"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/deviceCountSingle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:checked="true"
                    android:text="@string/label_device_count_single" 
                    />

                <RadioButton
                    android:id="@+id/deviceCountMultipe"
                    android:layout_width="wrap_content"
                    android:textColor="#000000"
                    android:layout_height="wrap_content"
                    android:text="@string/label_device_count_multiple"
                    android:layout_marginLeft="10dp"
                     />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
             android:gravity="center_horizontal"
            >

            <Button
                android:id="@+id/connect"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:textColor="#ffffff"
                android:background="#3399FF"
                android:text="@string/btn_connect" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/labInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/linearLayout1"
        android:text="广州市德斐尔电子科技有限公司"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
